--- a/conf/root-dev.conf
+++ b/conf/root-dev.conf
@@ -33,6 +33,16 @@ akka {
   # And then uncomment this line to debug the configuration.
   #
   #log-config-on-start = true
+
+  actor {
+    default-dispatcher {
+      executor = "thread-pool-executor"
+      throughput = 1
+      thread-pool-executor {
+        fixed-pool-size = 2 # db conn pool (50) + number of cores (4) + housekeeping (1)
+      }
+    }
+  }
 }
 
 ## Secret key
